--- a/src/main/webapp/bootstrap_home/css/style.css
+++ b/src/main/webapp/bootstrap_home/css/style.css
@@ -39,7 +39,7 @@ h5 {
   font-weight: 600;
 }
 .nav > li > a {
-  color: #a7b1c2;
+  color: #c5ccd6;
   font-weight: 600;
   padding: 14px 20px 14px 25px;
 }
@@ -51,7 +51,7 @@ h5 {
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus {
-  background-color: #293846;
+  background-color: #3B3B3B;
   color: white;
 }
 .nav .open > a,
@@ -71,7 +71,7 @@ h5 {
 }
 .navbar-default {
   background-color: transparent;
-  border-color: #2f4050;
+  border-color: #454545;/* #2f4050 */
 }
 .navbar-top-links li {
   display: inline-block;
@@ -161,14 +161,14 @@ h5 {
 }
 .nav-header {
   padding: 33px 25px;
-  background: url("patterns/header-profile.png") no-repeat;
+  /* background: url("patterns/header-profile.png") no-repeat; */
 }
 .pace-done .nav-header {
   transition: all 0.4s;
 }
 .nav > li.active {
   border-left: 4px solid #19aa8d;
-  background: #293846;
+  background: #3B3B3B;
 }
 .nav.nav-second-level > li.active {
   border: none;
@@ -260,12 +260,12 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
   position: absolute;
   left: 70px;
   top: 0;
-  background-color: #2f4050;
+  background-color: #454545;
   padding: 10px 10px 10px 10px;
   font-size: 12px;
 }
 .canvas-menu.mini-navbar .nav-second-level {
-  background: #293846;
+  background: #3B3B3B;
 }
 .mini-navbar li.active .nav-second-level {
   left: 65px;
@@ -466,7 +466,7 @@ body.canvas-menu.mini-navbar .navbar-default .nav li .profile-element a span {
 }
 body.canvas-menu nav.navbar-static-side {
   z-index: 2001;
-  background: #2f4050;
+  background: #454545;
   height: 100%;
   position: fixed;
   display: none;
@@ -1230,19 +1230,19 @@ button.dim:active:before {
 }
 /* TOOLTIPS */
 .tooltip-inner {
-  background-color: #2F4050;
+  background-color: #454545;
 }
 .tooltip.top .tooltip-arrow {
-  border-top-color: #2F4050;
+  border-top-color: #454545;
 }
 .tooltip.right .tooltip-arrow {
-  border-right-color: #2F4050;
+  border-right-color: #454545;
 }
 .tooltip.bottom .tooltip-arrow {
-  border-bottom-color: #2F4050;
+  border-bottom-color: #454545;
 }
 .tooltip.left .tooltip-arrow {
-  border-left-color: #2F4050;
+  border-left-color: #454545;
 }
 /* EASY PIE CHART*/
 .easypiechart {
@@ -3231,7 +3231,7 @@ body.tour-open .animated {
   padding: 12px 10px;
   margin: 0;
   border-radius: 0;
-  background: #2f4050;
+  background: #454545;
   color: #fff;
   text-align: center;
   border-right: 1px solid #334556;
@@ -3300,7 +3300,7 @@ body.tour-open .animated {
 }
 body {
   font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #2f4050;
+  background-color: #454545;
   font-size: 13px;
   color: #676a6c;
   overflow-x: hidden;
@@ -3320,7 +3320,7 @@ body.boxed-layout {
   background: url('patterns/shattered.png');
 }
 body.boxed-layout #wrapper {
-  background-color: #2f4050;
+  background-color: #454545;
   max-width: 1200px;
   margin: 0 auto;
   -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
@@ -3597,7 +3597,7 @@ body.body-small .footer.fixed {
   border: none;
 }
 .nav-tabs > li > a {
-  color: #A7B1C2;
+  color: #c5ccd6;
   font-weight: 600;
   padding: 10px 20px 10px 25px;
 }
@@ -4018,7 +4018,7 @@ a.close-canvas-menu {
   top: 10px;
   right: 15px;
   z-index: 1011;
-  color: #a7b1c2;
+  color: #c5ccd6;
 }
 a.close-canvas-menu:hover {
   color: #fff;
@@ -5141,7 +5141,7 @@ dd.project-people {
 .article h1 {
   font-size: 48px;
   font-weight: 700;
-  color: #2F4050;
+  color: #454545;
 }
 .article p {
   font-size: 15px;
@@ -5512,7 +5512,7 @@ body.body-small .vote-icon {
   display: block;
 }
 .small-chat-box .heading {
-  background: #2f4050;
+  background: #454545;
   padding: 8px 15px;
   font-weight: bold;
   color: #fff;
